# picoluainit

./: CMakeLists.txt  README  init.c  memmap_default.ld  picolib.c  picolib.h
littlefs-2.6.1/: lfs.h
scripts/: files2elf.sh
